<resources>
    <string name="app_name">Mike Monk</string>

    <string name="about_label">About</string>
    <string name="about_author_name">Bartłomiej Wierciński</string>
    <string name="about_autor">AUTHOR</string>
    <string name="about_site">http://fachmann.ro.lt/</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_production_year">2017</string>

    <string name="share_error">No application for URL</string>
    <string name="change_level">Change level</string>

    <string name="level_0">Off</string>
    <string name="level_1">Easy</string>
    <string name="level_2">Medium</string>
    <string name="level_3">Hard</string>
    <string name="level_4">Bist du verrückt?</string>
    <string name="menu_free_mode">Free Mode</string>
</resources>
